# starter_kit_cpp

./: .gdbinit  2021-07-08_17-01_expert_lead_notes.md  info.cpp  notes.txt
architecture/: 2021-08-19_09-11_clean_architecture_course_notes.md
articles/constexpr/: 2021-05-28_16-42_constexpr.md  constexpr.cpp
articles/iterator/: 2021-06-15_13-48_iterator_info.md  list.psd  temp.cpp
beautiful-stl/: counting-and-finding.cpp
container/: Dockerfile
data-structures/hash-tables/: hash_table.cpp
data-structures/lists/: custom-linked-list-smart-ptrs.cpp  custom-linked-list.cpp  deque.cpp  forward-list.cpp
data-structures/queues/: deque.cpp  queue.cpp
data-structures/stack/: std_stack.cpp
data-structures/trees/: binary-search-tree.cpp  binary-search-tree.h
data-structures/trie/: 2021-06-23_11-40_about_trie.md  trie.cpp
design_patterns/creational/: test.cpp  (+4 more)
modern-cpp-features/: modern-cpp-features.md
multi-tasking/: 2021-06-28_20-13_multi-task-info.md  simple-threads.cpp
problems/BookAnalyzer/book-analyzer/: CMakeLists-with-gtest.txt  CMakeLists.txt  CMakeLists.txt.linux  QA  analyzer.h  arg-parser.h  book-analyzer-tests.cpp  book-analyzer.cpp  book.h  entry-data.h  input-parser.h  libs-path-for-make-on-windows.back-up.cmake  orders.h  output.h
problems/closest_and_furthest_points_in_a_plane/: CMakeLists.txt  closest_points.cpp  main.cpp  myproject.cpp  myproject.hpp
problems/closest_and_furthest_points_in_a_plane/tests/: test_main.cpp
security_code/: 2021-08-02_08-52_seven_pernicious_kingdoms.md  CMakeLists.txt  deadlocks.cpp  deadlocks.hpp  main.cpp
template_work_dir/: CMakeLists.txt
working-env/: main.cpp
(+58 files in other folders)
